--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -6,9 +6,14 @@
     tools:context=".FragmentB">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginLeft="30sp"
+        android:id="@+id/imageViewxD"
+
+
+        />
 
 </FrameLayout>
